<resources>
    <string name="app_name">WWCode Mérida</string>
    <string name="hello_conference_fragment">Hello conference fragment</string>
    <string name="hello_program_fragment">Hello Program fragment</string>
    <string name="hello_people_fragment">Hello People fragment</string>
    <string name="hello_venue_fragment">Hello Venue fragment</string>
    <string name="hello_sponsors_fragment">Hello Sponsors fragment</string>
    <string name="conference">Event</string>
    <string name="program">Program</string>
    <string name="people">Speakers</string>
    <string name="venue">Venue</string>
    <string name="sponsors">Sponsors</string>
    <string name="registro">Registro</string>
    <string name="spanish">Spanish</string>
    <string name="conference_label">Conference</string>
    <string name="linkedin_label">Contacto</string>
    <string name="about">Women Who Code es una organización sin fines de lucro, dedicada a inspirar a mujeres para introducirse y  sobresalir en el área de tecnologías de la información.\n\nEn Mérida, comenzamos las actividades el 4 de Octubre del 2014. A partir de esa fecha se han impartido talleres de baby steps, frontend, arduino, android, php, base de datos, liderazgo, social media y robótica para niñas, entre otros.</string>
    <string name="event_info">Nuestro evento de aniversario tendrá lugar el sábado 20 de Octubre.\n\nEl evento es gratuito, con cupo limitado, requerimos que te registres para asegurar tu lugar.</string>
    <string name="tittle_event">2do Encuentro de Mujeres en las Tecnologías</string>
    <string name="urlMeetup">https://www.eventbrite.com/e/registro-2do-encuentro-de-mujeres-en-las-tecnologias-49194798968?aff=erellivmlt</string>
    <string name="start_hour_event_one">09:00</string>
    <string name="end_hour_event_one">09:50</string>
    <string name="type_event_one">Registro, Desayuno, Actividad de networking</string>
    <string name="name_event_one">Registro, Desayuno, Actividad de networking</string>
    <string name="description_event_one">Si llegas y no has desayunado, gracias a nuestros patrocinadores te ofreceremos un pequeño desayuno para que estes a tiempo en las conferencias.</string>
    <string name="author_event_one">Women Who Code Mérida</string>
    <string name="start_hour_event_two">09:50</string>
    <string name="end_hour_event_two">10:00</string>
    <string name="type_event_two">Bienvenida</string>
    <string name="name_event_two">Bienvenida</string>
    <string name="description_event_two">Se dará la bienvenida al evento, así cómo la presentación de invitados</string>
    <string name="author_event_two">Women Who Code Mérida</string>
    <string name="start_hour_event_3">10:00</string>
    <string name="end_hour_event_3">10:30</string>
    <string name="type_event_3">Keynote</string>
    <string name="name_event_3">El mundo de la tecnología, un lugar "difícil" para las mujeres</string>
    <string name="description_event_3">Contar mi experiencia de cómo, por miedo a no poder y por estereotipos, decidí no estudiar ingeniería en sistemas, y qué fue lo que me llevó a finalmente sí dedicarme a ello.</string>
    <string name="author_event_3">Maria Fernanda Bojorquez Cavazos</string>
    <string name="start_hour_event_4">10:30</string>
    <string name="end_hour_event_4">11:00</string>
    <string name="type_event_4">Keynote</string>
    <string name="name_event_4">Todos los  caminos conducen a la programación.</string>
    <string name="description_event_4">El objetivo principal de mi ponencia es mostrar cómo se puede hacer un primer proyecto en Android usando básicos conocimientos y dejando de lado conceptos más complejos como bases de datos o servidores. En el desarrollo de mi ponencia también hablaré de cómo muchos caminos conducen a la programación y hay muchas formas de acercarse al desarrollo de software</string>
    <string name="author_event_4">Cristina Rodríguez</string>
    <string name="start_hour_event_5">11:00</string>
    <string name="end_hour_event_5">11:30</string>
    <string name="type_event_5">Keynote</string>
    <string name="name_event_5">Maximiza tu carrera profesional con Salesforce</string>
    <string name="description_event_5">Salesforce es una tecnología Cloud que está creciendo de forma exponencial gracias a los beneficios y la rapidez de implementación, la oportunidad de crecimiento profesional es muy grande. Te invito a conocer que y quien es Salesforce y como podrás maximizar tu carrera con esta plataforma.</string>
    <string name="author_event_5">Grissell Cabrera Suarez</string>
    <string name="start_hour_event_6">11:30</string>
    <string name="end_hour_event_6">12:00</string>
    <string name="type_event_6">Keynote</string>
    <string name="name_event_6">Efectos sociales del Code Review</string>
    <string name="description_event_6">Descripción breve sobre que es el code review, mención de algunos de los impactos que tiene este en los developers y razones por las que deberíamos implementarlo. La base de mi información es de las experiencias que he tenido y de los libros: Clean Code: A Hand Book of Agile Software Craftsmanship, Best Kept Secrets of Peer Code Review. </string>
    <string name="author_event_6">Dulce Karina González Láriz</string>
    <string name="start_hour_event_7">12:00</string>
    <string name="end_hour_event_7">13:00</string>
    <string name="type_event_7">Mesa Panel</string>
    <string name="name_event_7">Mesa Panel: “Hablemos de comunidades tecnológicas”</string>
    <string name="description_event_7">Moderadora: Grisel Ancona</string>
    <string name="author_event_7">Grecia Castaldi, Loyda Luis, Ana Loyo, Yuliana Reyna, Sol Estrada</string>
    <string name="start_hour_event_8">13:00</string>
    <string name="end_hour_event_8">14:00</string>
    <string name="type_event_8">Lunch</string>
    <string name="name_event_8">Lunch</string>
    <string name="description_event_8">Estar todo día en el evento puede ser muy agotador, por ello gracias a nuestros patrocinadores te estaremos brindando un pequeño almuerzo. </string>
    <string name="author_event_8">Women Who Code Mérida</string>
    <string name="start_hour_event_9">14:00</string>
    <string name="end_hour_event_9">14:30</string>
    <string name="type_event_9">Keynote</string>
    <string name="name_event_9">The Web Design Process in Agile Methodologies</string>
    <string name="description_event_9">Mi tema habla de la adaptación del proceso de diseño web dentro de las metodologías ágiles, sus ventajas y desventajas, y cómo éstas pueden afectar la velocidad, eficiencia y el resultado final de un producto</string>
    <string name="author_event_9">María José Quirino Andrade</string>
    <string name="start_hour_event_10">14:30</string>
    <string name="end_hour_event_10">15:30</string>
    <string name="type_event_10">Mesa panel</string>
    <string name="name_event_10">Mesa panel: “Oportunidades laborales en industria TI” </string>
    <string name="description_event_10">Moderadora: Grisel Ancona</string>
    <string name="author_event_10">SoftwareHouse, TangoSource, DedaGroup México</string>
    <string name="start_hour_event_11">15:30</string>
    <string name="end_hour_event_11">16:00</string>
    <string name="type_event_11">Keynote</string>
    <string name="name_event_11">Tema relacionado a AI</string>
    <string name="description_event_11">Por el momento no tenemos una descripción de este evento. </string>
    <string name="author_event_11">Vanessa Herrera Gutierrez</string>
    <string name="start_hour_event_12">16:00</string>
    <string name="end_hour_event_12">16:30</string>
    <string name="type_event_12">Keynote</string>
    <string name="name_event_12">Saca tu potencial contribuyendo a proyectos Open Source</string>
    <string name="description_event_12">Una de las ventajas de contribuir a proyectos open source es que te permite desarrollar tus habilidades de comunicación, colaboración y programación mientras sigues aprendiendo. En esta charla te daré algunos tips para sacarle el máximo provecho a esta experiencia, también te diré como hacer tú primera contribución e incluso cómo hacer que te paguen por tus contribuciones.</string>
    <string name="author_event_12">Alejandra Bustos Nieto</string>
    <string name="start_hour_event_13">16:30</string>
    <string name="end_hour_event_13">16:40</string>
    <string name="type_event_13">Lightning Talk</string>
    <string name="name_event_13">Aprendizaje automático, ¿moda o necesidad?</string>
    <string name="description_event_13">En la actualidad el aprendizaje automático está de moda, todos quieren implementarlos pero hasta qué punto es una necesidad. En esta charala analizaremos algunos casos para que generes tu propia opinión al respecto.</string>
    <string name="author_event_13">Ana Luz Loyo Páez</string>
    <string name="start_hour_event_14">16:40</string>
    <string name="end_hour_event_14">16:50</string>
    <string name="type_event_14">Lightning Talk</string>
    <string name="name_event_14">La historia de las mujeres en la tecnología</string>
    <string name="description_event_14">Vamos hablar de todas aquellas mujeres q nos han dejado su legado en la tecnología</string>
    <string name="author_event_14">Sol Estrada</string>
    <string name="start_hour_event_15">16:50</string>
    <string name="end_hour_event_15">17:00</string>
    <string name="type_event_15">Lightning Talk</string>
    <string name="name_event_15">Design Thinking para nuevos equipos de desarrollo</string>
    <string name="description_event_15">Aprende a incorporar un enfoque de Pensamiento de Diseño (Design Thinking) para proporcionar una solución que solucione problemas rápidamente y gracias a ello poder crear una Experiencia de Usuario convincente, permitiendo que los nuevos equipos de desarrollo se identifiquen con el usuario antes de que comience cualquier etapa de desarrollo</string>
    <string name="author_event_15">Maryl Gonzalez</string>
    <string name="start_hour_event_16">17:00</string>
    <string name="end_hour_event_16">17:30</string>
    <string name="type_event_16">Cierre</string>
    <string name="name_event_16">Cierre</string>
    <string name="description_event_16">Agradecimiento a los asistentes, ponentes, patrocinadores, invitados. Posterior se hará el corte del pastel conmemorativo al tercer aniversario de la comunidad en Mérida</string>
    <string name="author_event_16">Women Who Code Mérida</string>
    <string name="speaker_name_1">Maria Fernanda Bojorquez Cavazos</string>
    <string name="speaker_job_1">Licenciada en Animación y Arte Digital</string>
    <string name="speaker_bio_1">Mafer estudió ""Animación y Arte Digital"" en el Tec de Monterrey en Guadalajara. Descubrió su gusto por la programación durante su intercambio en Vancouver Film School, donde realizó el programa "Programming for Games, Web and Mobile". Actualmente trabaja como desarrolladora de aplicaciones para iOS en Handy, ha realizado también aplicaciones para Android y un poco de desarrollo Web.</string>
    <string name="speaker_conference_1">El mundo de la tecnología, un lugar "difícil" para las mujeres</string>
    <string name="speaker_LinkedIn_1">https://www.linkedin.com/in/maferbojorquez</string>
    <string name="venue_name">Auditorio de la Universidad Modelo</string>
    <string name="venue_description">La Universidad Modelo, es una institución privada de educación superior que se encuentra localizada en Mérida, Yucatán, contando con dos campus alternos en Valladolid, Yucatán y en Chetumal, Quintana Roo. Actualmente, la Universidad Modelo imparte 22 carreras a nivel licenciatura y 10 a nivel posgrado en las áreas de Negocios, Salud, Arquitectura y Diseño, Derecho y Ciencias Políticas, Ingeniería y Humanidades.</string>
    <string name="btn_sitio_web">Sitio Web</string>
    <string name="btn_maps">Cómo llegar</string>
</resources>