<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_layout"
    android:orientation="horizontal"
    android:padding="4dp">

    <ImageView
        android:id="@+id/speaker_image"
        android:layout_width="@dimen/list_layout"
        android:layout_height="@dimen/list_layout"
        android:scaleType="fitCenter"
        tools:src="@drawable/femaleuser" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_layout"
        android:orientation="vertical"
        android:weightSum="3">

        <TextView
            android:id="@+id/section_job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingEnd="@dimen/dimen_8dp"
            android:paddingLeft="@dimen/dimen_8dp"
            android:paddingRight="@dimen/dimen_8dp"
            android:paddingStart="@dimen/dimen_8dp"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorAccentDark"
            android:textSize="@dimen/font_small"
            android:textStyle="bold"
            tools:text="@string/speaker_job_1" />

        <TextView
            android:id="@+id/section_name"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="2"
            android:paddingEnd="@dimen/dimen_8dp"
            android:paddingLeft="@dimen/dimen_8dp"
            android:paddingRight="@dimen/dimen_8dp"
            android:paddingStart="@dimen/dimen_8dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/textOnPrimary"
            android:textSize="@dimen/font_medium"
            tools:text="@string/speaker_name_1" />

        <TextView
            android:id="@+id/conference_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingEnd="@dimen/dimen_8dp"
            android:paddingLeft="@dimen/dimen_8dp"
            android:paddingRight="@dimen/dimen_8dp"
            android:paddingStart="@dimen/dimen_8dp"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorAccentDark"
            android:textSize="@dimen/font_small"
            android:textStyle="bold"
            android:ellipsize="end"
            android:maxLines="2"
            tools:text="@string/speaker_conference_1" />

    </LinearLayout>

</LinearLayout>