<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:background="@color/colorPrimaryDark" />

        <LinearLayout
            android:id="@+id/profile_wwc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_wwc"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:elevation="1dp"
                android:src="@drawable/encuentromujeres" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="85dp"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/single_conference_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="60dp"
                            android:textColor="@color/textOnPrimary"
                            android:textSize="@dimen/font_large"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            tools:text="@string/name_event_6"
                            android:padding="@dimen/dimen_8dp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_gravity="center_horizontal"
                            android:weightSum="2">

                            <TextView
                                android:id="@+id/start_text_hours"
                                style="@style/Widget.AppCompat.ImageButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:layout_marginRight="@dimen/dimen_16dp"
                                android:background="@drawable/buttonstyle"
                                android:padding="@dimen/dimen_4dp"
                                android:textColor="@color/textOnAccent"
                                android:textSize="@dimen/font_medium"
                                tools:text="@string/start_hour_event_6" />

                        <TextView
                            android:id="@+id/end_text_hours"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            style="@style/Widget.AppCompat.ImageButton"
                            tools:text="@string/end_hour_event_6"
                            android:padding="@dimen/dimen_4dp"
                            android:textSize="@dimen/font_medium"
                            android:textColor="@color/textOnAccent"
                            android:background="@drawable/buttonstyle"/>

                        </LinearLayout>

                        <TextView
                            android:id="@+id/single_conference_author"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/dimen_8dp"
                            android:textAlignment="center"
                            android:textColor="@color/textOnAccent"
                            android:textSize="@dimen/font_medium"
                            android:textStyle="normal"
                            tools:text="@string/author_event_6"
                            android:background="@color/colorPrimary"
                            android:padding="@dimen/dimen_8dp" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </RelativeLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/single_conference_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_wwc"
            android:layout_centerInParent="true"
            android:paddingEnd="@dimen/dimen_20dp"
            android:paddingLeft="@dimen/dimen_20dp"
            android:paddingRight="@dimen/dimen_20dp"
            android:paddingStart="@dimen/dimen_20dp"
            android:paddingTop="@dimen/dimen_8dp"
            android:paddingBottom="@dimen/dimen_8dp"
            android:textColor="@color/colorGreyDark"
            android:textSize="@dimen/font_medium"
            android:textStyle="normal"
            tools:text="@string/type_event_one" />

        <TextView
            android:id="@+id/single_conference_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/single_conference_type"
            android:layout_centerInParent="true"
            android:paddingEnd="@dimen/dimen_20dp"
            android:paddingLeft="@dimen/dimen_20dp"
            android:paddingRight="@dimen/dimen_20dp"
            android:paddingStart="@dimen/dimen_20dp"
            android:paddingTop="@dimen/dimen_8dp"
            android:textColor="@color/colorGreyDark"
            android:textSize="@dimen/font_medium"
            android:textStyle="normal"
            tools:text="@string/description_event_8" />

        <ImageView
            android:id="@+id/banner_footer"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentBottom="false"
            android:layout_below="@id/single_conference_desc"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/dimen_8dp"
            android:src="@drawable/wwcodemeridaappicon" />

    </RelativeLayout>

</ScrollView>