<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ConferenceFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:background="@color/colorPrimaryDark" />

        <LinearLayout
            android:id="@+id/profile_wwc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_wwc"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:elevation="1dp"
                    android:src="@drawable/logoblancotest" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="85dp"
                        app:cardCornerRadius="15dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/event_about"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="60dp"
                                android:textColor="@color/textOnPrimary"
                                android:textSize="@dimen/font_medium"
                                tools:text="@string/about"
                                android:padding="@dimen/dimen_8dp"/>

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/event_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_wwc"
            android:layout_marginBottom="@dimen/dimen_8dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:padding="@dimen/dimen_16dp"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:layout_marginEnd="@dimen/dimen_20dp"
            android:textColor="@color/colorGreyDark"
            android:textSize="@dimen/font_medium"
            tools:text="@string/event_info" />


        <LinearLayout
            android:id="@+id/social_media"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/event_info"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:weightSum="1">

            <TextView
                android:id="@+id/registro"
                style="@style/Widget.AppCompat.ImageButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_8dp"
                android:layout_marginLeft="@dimen/dimen_20dp"
                android:layout_marginStart="@dimen/dimen_20dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:layout_weight="1"
                android:background="@drawable/buttonstyle"
                android:padding="@dimen/dimen_16dp"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_small"
                android:textStyle="bold"
                tools:text="@string/registro" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>